Fix some spacing issues

--- a/less/pager.less
+++ b/less/pager.less
@@ -14,7 +14,7 @@
     > a,
     > span {
       display: inline-block;
-      padding: 5px 14px;
+      padding: 8px 16px;
       background-color: @pager-bg;
       border: 1px solid @pager-border;
       border-radius: @pager-border-radius;
