--- a/less/wells.less
+++ b/less/wells.less
@@ -5,9 +5,9 @@
 
 // Base class
 .well {
-  min-height: 20px;
-  padding: 19px;
-  margin-bottom: 20px;
+  min-height: 24px;
+  padding: 16px;
+  margin-bottom: 24px;
   background-color: @well-bg;
   border: 1px solid @well-border;
   border-radius: @border-radius-base;
@@ -24,6 +24,6 @@
   border-radius: @border-radius-large;
 }
 .well-sm {
-  padding: 9px;
+  padding: 8px;
   border-radius: @border-radius-small;
 }
